embedded.sdk/.metadata/.plugins/org.eclipse.cdt.ui/pacman.build.log
15:43:24 **** Auto Build of configuration Debug for project pacman ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/sources/movement.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/sources/movement.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../pacman_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/sources/movement.d" -MT"src/sources/movement.o" -o "src/sources/movement.o" "../src/sources/movement.c"
../src/sources/movement.c: In function 'getMovement':
../src/sources/movement.c:15:10: warning: implicit declaration of function 'getJoystickX' [-Wimplicit-function-declaration]
  s32 x = getJoystickX() - OFFSET;
          ^~~~~~~~~~~~
../src/sources/movement.c:16:10: warning: implicit declaration of function 'getJoystickY' [-Wimplicit-function-declaration]
  s32 y = getJoystickY() - OFFSET;
          ^~~~~~~~~~~~
../src/sources/movement.c:20:6: error: expected expression before ')' token
   if()
      ^
../src/sources/movement.c:29:15: warning: format '%d' expects argument of type 'int', but argument 2 has type 's32 {aka long int}' [-Wformat=]
   printf("x: %d, y: %d\n",x,y);
              ~^
              %ld
../src/sources/movement.c:29:22: warning: format '%d' expects argument of type 'int', but argument 3 has type 's32 {aka long int}' [-Wformat=]
   printf("x: %d, y: %d\n",x,y);
                     ~^
                     %ld
In file included from ../src/sources/../headers/entity.h:18:0,
                 from ../src/sources/../headers/movement.h:13,
                 from ../src/sources/movement.c:9:
At top level:
../src/sources/../headers/score.h:17:12: warning: 'highscore' defined but not used [-Wunused-variable]
 static u16 highscore = 0;
            ^~~~~~~~~
../src/sources/../headers/score.h:16:12: warning: 'score' defined but not used [-Wunused-variable]
 static u16 score = 0;
            ^~~~~
In file included from ../src/sources/../headers/entity.h:17:0,
                 from ../src/sources/../headers/movement.h:13,
                 from ../src/sources/movement.c:9:
../src/sources/../headers/world.h:86:11: warning: 'gameOver' defined but not used [-Wunused-variable]
 static u8 gameOver[WIDTH][HEIGHT] = {
src/sources/subdir.mk:36: recipe for target 'src/sources/movement.o' failed
           ^~~~~~~~
make: *** [src/sources/movement.o] Error 1

15:43:25 Build Finished (took 315ms)

